--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,4 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - pytest
-  - bash <(curl -Ls https://coverage.codacy.com/get.sh)
+  - tests/test.sh
