--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+---
 language: python
 python:
   - "3.8"
@@ -5,3 +6,4 @@ install:
   - pip install -r requirements.txt
 script:
   - cd tests && ./test.sh
+  - bash <(curl -s https://codecov.io/bash)
