--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,3 +43,4 @@ jobs:
           command: cd tests && bash <(curl -s https://codecov.io/bash)
     # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
     resource_class: large
+    parallelism: 4
