--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ readme = "README.md"
 packages = [{include = "raise_utils"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
 pytest = "^7.3.2"
 pytest-cov = "^4.1.0"
 cvxopt = "^1.3.1"
@@ -20,11 +19,12 @@ coverage = "^7.2.7"
 ray = {extras = ["tune"], version = "^2.5.0"}
 scikit-learn = ">=0.23.2"
 imblearn = "^0.0"
+bohb-hpo = "^0.5.2"
 
 [tool.poetry.extras]
 tensorflow = ["tensorflow>=2.0.0"]
 tensorflow_macos = ["tensorflow-macos>=2.0.0"]
 
 [build-system]
-requires = ["setuptools", "wheel", "python>=3.8"]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
