--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ python:
 install:
   - pip install -r requirements.txt
 script:
+  - cd raise_utils/transforms && cythonize -i -a remove_labels.pyx
   - cd tests && ./test.sh
   - bash <(curl -s https://codecov.io/bash)
