--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ ray = {extras = ["tune"], version = "^2.5.0"}
 scikit-learn = ">=0.23.2"
 imblearn = "^0.0"
 bohb-hpo = "^0.5.2"
+Cython = "^0.29.24"
+tabulate = "^0.8.9"
 
 [tool.poetry.extras]
 tensorflow = ["tensorflow>=2.0.0"]
