--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,7 +3,11 @@
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
 # Required
-version: 1
+version: 2
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: 3.8
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
