--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,15 +5,10 @@
 # Required
 version: 2
 build:
-  os: "ubuntu-22.04"
+  os: ubuntu-22.04
   tools:
     python: "3.8"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: sphinx-docs/conf.py
-
-python:
-  version: "3.8"
-  install:
-    - requirements: requirements.txt
