--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pytest-cov = "^4.1.0"
 cvxopt = "^1.3.1"
 pandas = "^2.0.2"
 numpy = "^1.23.2"
+torch = "^2.3.0"
 colorama = "^0.4.6"
 hyperopt = "^0.2.7"
 coverage = "^7.2.7"
