--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
       - run:
           name: Cythonize remove_labels.pyx
-          command: python setup.py build_ext --inplace
+          command: python setup.py build_ext --inplace && mv remove_labels.* raise_utils/transforms/
       - run:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
