--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,27 +2,27 @@
 name = "raise-utils"
 requires-python=">=3.9,<4.0"
 dependencies = [
-    "pytest^=7.3.2",
-    "pytest-cov^=4.1.0",
-    "cvxopt^=1.3.1",
-    "pandas^=2.0.2",
-    "numpy^=1.23.2",
-    "torch^=2.3.0",
-    "colorama^=0.4.6",
-    "hyperopt^=0.2.7",
-    "coverage^=7.2.7",
-    "scikit-learn^==0.23.2",
-    "imblearn^=0.0",
-    "bohb-hpo^=0.5.2",
-    "Cython^=0.29.24",
-    "tabulate^=0.8.9",
-    "keras^=3.0.0",
-    "statsmodels^=0.14.0"
+    "pytest~=7.3.2",
+    "pytest-cov~=4.1.0",
+    "cvxopt~=1.3.1",
+    "pandas~=2.0.2",
+    "numpy~=1.23.2",
+    "torch~=2.3.0",
+    "colorama~=0.4.6",
+    "hyperopt~=0.2.7",
+    "coverage~=7.2.7",
+    "scikit-learn~==0.23.2",
+    "imblearn~=0.0",
+    "bohb-hpo~=0.5.2",
+    "Cython~=0.29.24",
+    "tabulate~=0.8.9",
+    "keras~=3.0.0",
+    "statsmodels~=0.14.0"
 ]
 
 [tool.poetry]
 name = "raise-utils"
-version = "2.3.0"
+version = "2.4.0"
 description = "RAISE lab package"
 authors = ["Rahul Yedida <rahul.yedida@pm.me>"]
 license = "LGPL 2.1"
