--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "colorama~=0.4.6",
     "hyperopt~=0.2.7",
     "coverage~=7.2.7",
-    "scikit-learn~==0.23.2",
+    "scikit-learn~=0.23.2",
     "imblearn~=0.0",
     "bohb-hpo~=0.5.2",
     "Cython~=0.29.24",
