--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,17 @@ description = "RAISE lab package"
 readme = "README.md"
 requires-python=">=3.9,<4.0"
 dependencies = [
+    "setuptools==65.0.2",
     "pytest~=7.3.2",
     "pytest-cov~=4.1.0",
     "cvxopt~=1.3.1",
-    "pandas~=2.0.2",
-    "numpy~=1.23.2",
+    "pandas~=2.2.2",
+    "numpy==1.26.4",
     "torch~=2.3.0",
     "colorama~=0.4.6",
     "hyperopt~=0.2.7",
     "coverage~=7.2.7",
-    "scikit-learn~=0.23.2",
+    "scikit-learn~=1.5.1",
     "imblearn~=0.0",
     "bohb-hpo~=0.5.2",
     "Cython~=0.29.24",
@@ -37,13 +38,13 @@ packages = [{include = "raise_utils"}]
 pytest = "^7.3.2"
 pytest-cov = "^4.1.0"
 cvxopt = "^1.3.1"
-pandas = "^2.0.2"
+pandas = "^2.2.2"
 numpy = "^1.23.2"
 torch = "^2.3.0"
 colorama = "^0.4.6"
 hyperopt = "^0.2.7"
 coverage = "^7.2.7"
-scikit-learn = ">=0.23.2"
+scikit-learn = "^1.5.1"
 imblearn = "^0.0"
 bohb-hpo = "^0.5.2"
 Cython = "^0.29.24"
