--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ dependencies = [
     "cvxopt~=1.3.1",
     "pandas~=2.2.2",
     "numpy==1.26.4",
-    "torch~=2.3.0",
     "colorama~=0.4.6",
     "hyperopt~=0.2.7",
     "coverage~=7.2.7",
@@ -22,7 +21,8 @@ dependencies = [
     "Cython~=0.29.24",
     "tabulate~=0.8.9",
     "keras~=3.0.0",
-    "statsmodels~=0.14.0"
+    "statsmodels~=0.14.0",
+    "tensorflow>=2.16.2",
 ]
 
 [tool.poetry]
