--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-pytest
-pytest-cov
-cvxopt
-pandas
-numpy~=1.23.2
+pytest~=7.3.2
+pytest-cov~=4.1.0
+cvxopt~=1.3.1
+pandas~=2.2.2
+numpy==1.26.4
 keras>=3.0.0
-colorama
-hyperopt
-coverage
-scikit-learn>=0.23.2
+colorama~=0.4.6
+hyperopt~=0.2.7
+coverage~=7.2.7
+scikit-learn~=1.5.1
 imblearn
-bohb-hpo
-Cython
-tabulate
-statsmodels
+bohb-hpo~=0.5.2
+Cython~=0.29.24
+tabulate~=0.8.9
+statsmodels~=0.14.0
