--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "raise-utils"
-version = "2.5.0"
+version = "2.5.1"
 authors = [{ name = "Rahul Yedida", email = "rahul.yedida@pm.me" }]
 description = "RAISE lab package"
 readme = "README.md"
@@ -20,14 +20,14 @@ dependencies = [
     "bohb-hpo~=0.5.2",
     "Cython~=0.29.24",
     "tabulate~=0.8.9",
-    "keras~=3.0.0",
+    "keras>=3.0.0,<4.0.0",
     "statsmodels~=0.14.0",
     "tensorflow>=2.16.2",
 ]
 
 [tool.poetry]
 name = "raise-utils"
-version = "2.5.0"
+version = "2.5.1"
 description = "RAISE lab package"
 authors = ["Rahul Yedida <rahul.yedida@pm.me>"]
 license = "LGPL 2.1"
@@ -49,7 +49,7 @@ imblearn = "^0.0"
 bohb-hpo = "^0.5.2"
 Cython = "^0.29.24"
 tabulate = "^0.8.9"
-keras = "^3.0.0"
+keras = ">=3.0.0,<4.0.0"
 statsmodels = "^0.14.0"
 python = ">=3.9"
 
