--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pytest-cov~=4.1.0
 cvxopt~=1.3.1
 pandas~=2.2.2
 numpy==1.26.4
-keras>=3.0.0
+keras>=3.0.0,<4.0.0
 colorama~=0.4.6
 hyperopt~=0.2.7
 coverage~=7.2.7
