--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "raise-utils"
-version = "2.5.1"
+version = "2.5.2"
 authors = [{ name = "Rahul Yedida", email = "rahul.yedida@pm.me" }]
 description = "RAISE lab package"
 readme = "README.md"
-requires-python=">=3.9,<4.0"
+requires-python=">=3.9,<3.13"
 dependencies = [
-    "setuptools==65.0.2",
+    "setuptools==75.5.0",
     "pytest~=7.3.2",
     "pytest-cov~=4.1.0",
     "cvxopt~=1.3.1",
@@ -25,14 +25,8 @@ dependencies = [
     "tensorflow>=2.16.2",
 ]
 
-[tool.poetry]
-name = "raise-utils"
-version = "2.5.1"
-description = "RAISE lab package"
-authors = ["Rahul Yedida <rahul.yedida@pm.me>"]
-license = "LGPL 2.1"
-readme = "README.md"
-packages = [{include = "raise_utils"}]
+[tool.setuptools]
+ext-modules = [{ name = "remove_labels", sources = ["raise_utils/transforms/remove_labels.pyx"] }]
 
 [tool.poetry.dependencies]
 pytest = "^7.3.2"
@@ -51,7 +45,7 @@ Cython = "^0.29.24"
 tabulate = "^0.8.9"
 keras = ">=3.0.0,<4.0.0"
 statsmodels = "^0.14.0"
-python = ">=3.9"
+python = ">=3.11,<3.13"
 
 [tool.ruff]
 select = ["E", "F", "I001"]
@@ -65,7 +59,7 @@ exclude = [
 ]
 
 line-length = 120
-target-version = "py310"
+target-version = "py312"
 
 [tool.ruff.flake8-quotes]
 inline-quotes = "single"
